Fix scrollbar corner

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,11 @@ div.Mui-focused {
   border: 3px solid #0c0c0c; /* creates padding around scroll thumb */
 }
 
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
+}
+
+
 /* Firefox-only styles */
 @-moz-document url-prefix() {
   * {
